<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name"></string>
    <string name="login">Вход</string>
    <string name="register">Регистрация</string>
    <string name="email">Email</string>
    <string name="password">Пароль</string>
    <string name="name">Имя</string>
    <string name="login_button">Войти</string>
    <string name="register_button">Зарегистрироваться</string>
    <string name="logout">Выйти</string>
    <string name="cart">Корзина</string>
    <string name="admin_panel">Админ панель</string>
    <string name="add_product">Добавить товар</string>
    <string name="edit_product">Редактировать товар</string>
    <string name="product_name">Название</string>
    <string name="product_description">Описание</string>
    <string name="product_price">Цена</string>
    <string name="product_category">Категория</string>
    <string name="product_size">Размер</string>
    <string name="product_color">Цвет</string>
    <string name="search_hint">Поиск одежды...</string>
    <string name="add_to_cart">Добавить в корзину</string>
    <string name="price">Цена</string>
    <string name="save">Сохранить</string>
    <string name="cancel">Отмена</string>
    <string name="total">Итого</string>
    <string name="empty_cart">Корзина пуста</string>
    <string name="login_required">Для добавления в корзину необходимо войти</string>
    <string name="admin_only">Только для администраторов</string>
    <string name="characteristics">Характеристики</string>
    <string name="description">Описание</string>
    <string name="in_stock">В наличии</string>
    <string name="out_of_stock">Нет в наличии</string>
    <string name="add_to_cart_button">В корзину</string>
    <string name="reviews">Отзывы</string>
    <string name="product_stock">Количество в наличии</string>
    <string name="in_stock_format">В наличии: %d шт</string>
    <string name="filters">Фильтры</string>
    <string name="apply_filters">Применить</string>
    <string name="clear_filters">Сбросить</string>
    <string name="all">Все</string>
    <string name="in_stock_only">Только в наличии</string>
    <string name="out_of_stock_only">Только нет в наличии</string>
    
    <!-- Categories -->
    <string-array name="product_categories">
        <item>Футболки</item>
        <item>Брюки</item>
        <item>Джинсы</item>
        <item>Куртки</item>
        <item>Платья</item>
        <item>Обувь</item>
        <item>Аксессуары</item>
        <item>Нижнее белье</item>
        <item>Спортивная одежда</item>
        <item>Верхняя одежда</item>
    </string-array>
    
    <!-- Sizes -->
    <string-array name="product_sizes">
        <item>XS</item>
        <item>S</item>
        <item>M</item>
        <item>L</item>
        <item>XL</item>
        <item>XXL</item>
        <item>XXXL</item>
        <item>28</item>
        <item>30</item>
        <item>32</item>
        <item>34</item>
        <item>36</item>
        <item>38</item>
        <item>40</item>
        <item>42</item>
        <item>44</item>
        <item>46</item>
        <item>48</item>
        <item>50</item>
        <item>52</item>
    </string-array>
</resources>

